# eve-obstacle-avoidance

./: CMakeLists.txt  README.md
launch/: square_traj.launch.py
src/: offboard.cpp  send_command_template.cpp
